syntax = "proto3";

package mpc.v1;

option go_package = "github.com/SafeMPC/mpc-service/pb/mpc/v1;mpc";

// MPC 消息类型定义
// 注意：此文件只定义消息类型，不定义 service
// 所有 service 定义在 signer.proto 中

// ============================================
// 协议消息相关
// ============================================

// 协议消息请求
message SubmitProtocolMessageRequest {
  string session_id = 1;
  string node_id = 2;
  bytes data = 3;
  int32 round = 4;
  string timestamp = 5;
}

// 协议消息响应
message SubmitProtocolMessageResponse {
  bool accepted = 1;
  string message = 2;
  int32 next_round = 3;
}

// ============================================
// 会话相关消息
// ============================================

message CreateSessionRequest {
  string key_id = 1;
  bytes message = 2;
  string protocol = 3;  // "gg18", "gg20", "frost"
  int32 timeout_seconds = 4;
  repeated string participant_nodes = 5;
}

message CreateSessionResponse {
  string session_id = 1;
  string status = 2;
  int32 threshold = 3;
  int32 total_nodes = 4;
  repeated string participating_nodes = 5;
  string created_at = 6;
  string expires_at = 7;
}

message SessionStatusRequest {
  string session_id = 1;
}

message SessionStatusResponse {
  string session_id = 1;
  string status = 2;
  int32 current_round = 3;
  int32 total_rounds = 4;
  repeated string participating_nodes = 5;
  string signature = 6;  // hex encoded
  string created_at = 7;
  string completed_at = 8;
  int32 duration_ms = 9;
}

// ============================================
// DKG 相关消息
// ============================================

// 启动 DKG 请求
message StartDKGRequest {
  string session_id = 1; // DKG 会话ID（等于 key_id）
  string key_id = 2;
  string algorithm = 3;   // 例：ECDSA
  string curve = 4;       // 例：secp256k1
  int32 threshold = 5;
  int32 total_nodes = 6;
  repeated string node_ids = 7; // 参与节点列表
  string client_public_key = 8;  // Client (P1) 的 Passkey 公钥（hex，2-of-2 模式需要）
}

message StartDKGResponse {
  bool started = 1;
  string message = 2;
}

// ============================================
// 签名相关消息
// ============================================

// 启动签名请求
message StartSignRequest {
  string session_id = 1; // 签名会话ID
  string key_id = 2;
  bytes message = 3;     // 要签名的消息
  string message_hex = 4; // 消息的hex编码（可选）
  string protocol = 5;   // "gg18", "gg20", "frost"
  int32 threshold = 6;
  int32 total_nodes = 7;
  repeated string node_ids = 8; // 参与节点列表
  string derivation_path = 9;   // 派生路径 (e.g. "m/44'/60'/0'/0/0")
  bytes parent_chain_code = 10; // 根 ChainCode，用于派生
  
  // 鉴权令牌（WebAuthn）
  message AuthToken {
    bytes passkey_signature = 1;     // WebAuthn Assertion Signature
    bytes authenticator_data = 2;    // WebAuthn AuthData
    bytes client_data_json = 3;      // WebAuthn ClientDataJSON
    string credential_id = 4;        // WebAuthn Credential ID
  }
  repeated AuthToken auth_tokens = 11;
  string client_public_key = 12;  // Client (P1) 的 Passkey 公钥（hex）
}

message StartSignResponse {
  bool started = 1;
  string message = 2;
}

// ============================================
// 签名聚合相关消息
// ============================================

message AggregateRequest {
  string session_id = 1;
}

message AggregateResponse {
  bool success = 1;
  string signature = 2;  // hex encoded
  string public_key = 3; // hex encoded
  string message_hash = 4;
  string aggregated_at = 5;
}

// ============================================
// 心跳消息
// ============================================

message HeartbeatRequest {
  string node_id = 1;
  string sent_at = 2;
  map<string, string> status_info = 3;
}

message HeartbeatResponse {
  bool alive = 1;
  string received_at = 2;
  map<string, string> instructions = 3;
}
